src/objects/Reservation__c.object
<CustomObject>
    <description>Stores information related to a Reservation originated through the system.</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the reservation to the application that originated it.</description>
        <inlineHelpText>Select the Application (if any) that led to the origination of this reservation.</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <description>Stores the date at which a camper plans to check in to the Campsite.</description>
        <inlineHelpText>Enter the date at which the camper will arrive at the Campsite.</inlineHelpText>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Camper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Individual making the reservation.</description>
        <inlineHelpText>Select the Account representing the primary Individual on the reservation.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campsite selected for this reservation.</description>
        <inlineHelpText>Select the campsite to associate with this reservation.</inlineHelpText>
        <label>Campsite</label>
        <referenceTo>Campsite__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <description>Stores the date at which a camper will leave the Campsite.</description>
        <inlineHelpText>Enter the check-out date for the camper.</inlineHelpText>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Descriptive text containing notes added to the reservation.</description>
        <inlineHelpText>Enter details for any special requests or notes related to the reservation.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Campers__c</fullName>
        <description>Stores the number of campers that will occupy a campsite during a given reservation</description>
        <inlineHelpText>Enter the number of campers that plan to stay at the campsite during this reservation.</inlineHelpText>
        <label>Number of Campers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reservation</label>
    <nameField>
        <label>Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>